apps/base/arr/ingress-sonarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    haproxy-ingress.github.io/backend-protocol: "http"
    haproxy-ingress.github.io/timeout-client: "600s"
    haproxy-ingress.github.io/timeout-server: "600s"
    haproxy-ingress.github.io/whitelist-source-range: "192.168.0.0/16,172.16.0.0/12,10.0.0.0/8"
spec:
  ingressClassName: haproxy-restricted
  tls:
    - hosts: [ "sonarr.k8s.rcrumana.xyz" ]
      secretName: sonarr-tls
  rules:
    - host: sonarr.k8s.rcrumana.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: sonarr, port: { number: 80 } }
